# drone_spike

./: .dockerignore  .gitignore  CLAUDE.md  pyproject.toml  requirements-cuda.txt
.agent/: README.md
.agent/sop/development/: local-setup.md  training-and-evaluation.md
.agent/sop/testing/: validation-scripts.md
.agent/specs/SPEC025-drone-interception-rl/: additional-diagrams.md  architecture.md  blueprint-reference.md  delivery-strategy.md  requirements.md  verification.md
.agent/specs/_NEXT-SPEC026/: README.md
.agent/system/: project_architecture.md
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
drone_intercept/env/: intercept_env.py  observation_builder.py  rewards.py  termination.py
drone_intercept/replay/: logger.py  plotter.py
drone_intercept/ros2_nodes/: __init__.py  offboard_command_node.py  target_provider_node.py  vehicle_state_node.py
drone_intercept/sim/: gz_target_visual.py  noise.py  obstacles.py  predictor.py  tracker.py
drone_intercept/sim/backends/: __init__.py  base.py  px4_gazebo.py  pyflyt.py  simplified.py
drone_intercept/sim/dynamics/: __init__.py  base.py  gazebo.py  simplified.py
drone_intercept/sim/target_behaviors/: __init__.py  (+4 more)
drone_intercept/training/: callbacks.py  eval_policy.py  train_ppo.py
scripts/: 01_env_smoke_test.py  02_target_behaviors.py  03_tracked_sensing.py  04_obstacles.py  05_prediction.py  06_gpu_check.py  07_short_training.py  08_eval_and_plot.py  09_train_full.py  10_eval.py  11_batch_viewer.py  12_px4_offboard_test.py  13_px4_backend_test.py  14_gazebo_eval.py  run_all.py
