[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-intercept"
version = "0.1.0"
description = "Drone interception RL spike — pursuit-evasion with Gymnasium + SB3"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.1",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["drone_intercept*"]
